Add inverse transform sampling.
This needed some rearranging of other content, such as the conjugate
prior tables.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2014-11-23  Matthias Vallentin  <vallentin@icir.org>
+
+    * Add section about inverse transform sampling.
+
+
 2014-05-18  Matthias Vallentin  <vallentin@icir.org>
 
     * Fix several issues reported by Kyaw Sint:
