--- a/cookbook.tex
+++ b/cookbook.tex
@@ -243,7 +243,7 @@
 
   \T{Inverse Gamma} & \invgamma & \pinvgamma & \dinvgamma &
   \frac{\beta}{\alpha-1} \; \alpha>1 &
-  \frac{\beta^2}{(\alpha-1)^2(\alpha-2)^2} \; \alpha > 2 &
+  \frac{\beta^2}{(\alpha-1)^2(\alpha-2)} \; \alpha > 2 &
   \frac{2(-\beta s)^{\alpha/2}}{\Gamma(\alpha)}K_\alpha
   \left( \sqrt{-4\beta s} \right)\\[3ex]
 
