Add CDFs for all distribution figures.
Previously we had only PMFs/PDFs. Now we have also the cumulative
next to the mass/density functions.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2014-12-08  Matthias Vallentin  <vallentin@icir.org>
+
+    * Add CDF plots in addition to PMFs/PDFs.
+
+
 2014-12-05  Matthias Vallentin  <vallentin@icir.org>
 
     * Fix typo in variance of inverse gamma distribution. (Difei Qin)
