--- a/cookbook.tex
+++ b/cookbook.tex
@@ -158,18 +158,22 @@
 
   \bottomrule
 \end{tabular}
-\begin{figure}[H]
-  \includegraphics[scale=0.35]{figs/uniform-discrete.pdf}
-  \includegraphics[scale=0.35]{figs/binomial.pdf}
-  \includegraphics[scale=0.35]{figs/geometric.pdf}
-  \includegraphics[scale=0.35]{figs/poisson.pdf}
-\end{figure}
-
 \end{center}
 
 \footnotetext{\T{Footnote about notation}}
 
 \pagebreak
+
+\begin{figure}[H]
+  \includegraphics[scale=0.35]{figs/uniform-pmf.pdf}
+  \includegraphics[scale=0.35]{figs/uniform-cdf-discrete.pdf}
+  \includegraphics[scale=0.35]{figs/binomial-pmf.pdf}
+  \includegraphics[scale=0.35]{figs/binomial-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/geometric-pmf.pdf}
+  \includegraphics[scale=0.35]{figs/geometric-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/poisson-pmf.pdf}
+  \includegraphics[scale=0.35]{figs/poisson-cdf.pdf}
+\end{figure}
 
 \subsection{\T{Continuous Distributions}}
 
@@ -275,18 +279,33 @@
 \end{center}
 
 \begin{figure}[H]
-  \includegraphics[scale=0.35]{figs/uniform-continuous.pdf}
-  \includegraphics[scale=0.35]{figs/normal.pdf}
-  \includegraphics[scale=0.35]{figs/lognormal.pdf}
-  \includegraphics[scale=0.35]{figs/student.pdf}
-  \includegraphics[scale=0.35]{figs/chisquare.pdf}
-  \includegraphics[scale=0.35]{figs/f.pdf}
-  \includegraphics[scale=0.35]{figs/exponential.pdf}
-  \includegraphics[scale=0.35]{figs/gamma.pdf}
-  \includegraphics[scale=0.35]{figs/invgamma.pdf}
-  \includegraphics[scale=0.35]{figs/beta.pdf}
-  \includegraphics[scale=0.35]{figs/weibull.pdf}
-  \includegraphics[scale=0.35]{figs/pareto.pdf}
+  \includegraphics[scale=0.35]{figs/uniform-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/uniform-cdf-continuous.pdf}
+  \includegraphics[scale=0.35]{figs/normal-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/normal-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/lognormal-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/lognormal-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/student-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/student-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/chisquare-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/chisquare-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/f-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/f-cdf.pdf}
+\end{figure}
+
+\begin{figure}[H]
+  \includegraphics[scale=0.35]{figs/exponential-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/exponential-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/gamma-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/gamma-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/invgamma-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/invgamma-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/beta-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/beta-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/weibull-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/weibull-cdf.pdf}
+  \includegraphics[scale=0.35]{figs/pareto-pdf.pdf}
+  \includegraphics[scale=0.35]{figs/pareto-cdf.pdf}
 \end{figure}
 
 \begin{multicols*}{2}
