Fix build issue.

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -1307,7 +1307,7 @@ $R_n$ \T{is unimodal} \imp $R_n$ \T{is an interval}
     &= \int_{\Theta_0} f(\theta\giv x^n)\,d\theta\\
 \end{align*}
 
-\T{Let H_0...H_K-1 be k hypotheses}.
+\T{Let} $H_0, \dots, H_{K-1}$ \T{be} $k$ \T{hypotheses}.
 \T{Suppose} $\theta \dist f(\theta\giv H_k)$,
 \[\Pr{H_k\giv x^n}
 = \frac{f(x^n\giv H_k)\Pr{H_k}}{\sum_{k=1}^K f(x^n\giv H_k)\Pr{H_k}},\]
