Fix typo in plug-in estimate of skewness and correlation

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -893,9 +893,9 @@ i.e., $\Pr{Z > \zat} = \alpha/2$ \T{and} $\Pr{-\zat < Z < \zat} = 1-\alpha$
   \item $\shat^2 = \displaystyle\frac{1}{n-1}\sumin
     (X_i-\samplemean)^2$
   \item  $\khat =
-    \displaystyle\frac{\frac{1}{n}\sumin(X_i-\mhat)^3}{\shat^3j}$
+    \displaystyle\frac{\frac{1}{n}\sumin(X_i-\mhat)^3}{\shat^3}$
   \item $\rhohat = \displaystyle\frac{\sumin(X_i-\samplemean)(Y_i-\bar{Y}_n)}%
-    {\sqrt{\sumin(X_i-\samplemean)^2}\sqrt{\sumin(Y_i-\bar{Y}_n)}}$
+    {\sqrt{\sumin(X_i-\samplemean)^2}\sqrt{\sumin(Y_i-\bar{Y}_n)^2}}$
 \end{itemize}
 
 \section{\T{Parametric Inference}}
