--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2014-12-14  Jarrod Millman  <millman@berkeley.edu>
+
+    * Fix typo in plug-in estimate of skewness and correlation.
+
+
 2014-12-08  Matthias Vallentin  <vallentin@icir.org>
 
     * Add CDF plots in addition to PMFs/PDFs.
