Changed \emptyset to \varnothing for readability

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -320,7 +320,7 @@
   \item \T{Event} $A \subseteq \Omega$
   \item \T{Sigma-algebra} $\mathcal{A}$
     \begin{enumerate}
-      \item $\emptyset \in \mathcal{A}$
+      \item $\varnothing \in \mathcal{A}$
       \item $A_1,A_2,\dots, \in \mathcal{A}
         \imp \bigcup_{i=1}^\infty A_i \in \mathcal{A}$
       \item $A \in \mathcal{A} \imp \comp{A} \in \mathcal{A}$
@@ -337,12 +337,12 @@
 
 \T{Properties}
 \begin{itemize}
-  \item $\Pr{\emptyset} = 0$
+  \item $\Pr{\varnothing} = 0$
   \item $B = \Omega \cap B = (A \cup \comp{A}) \cap B
     = (A \cap B) \cup (\comp{A} \cap B)$
   \item $\Pr{\comp{A}} = 1 - \Pr{A}$
   \item $\Pr{B} = \Pr{A \cap B} + \Pr{\comp{A} \cap B}$
-  \item $\Pr{\Omega} = 1 \qquad \Pr{\emptyset} = 0$
+  \item $\Pr{\Omega} = 1 \qquad \Pr{\varnothing} = 0$
   \item $\comp{\left(\bigcup_n A_n\right)} = \bigcap_n \comp{A_n}
     \quad
     \comp{\left(\bigcap_n A_n\right)} = \bigcup_n \comp{A_n}
