Fix expected values inequalities.
Reported by Kristóffy Hajnalka.

--- a/cookbook.tex
+++ b/cookbook.tex
@@ -485,8 +485,8 @@
   \item $\E{XY} = \displaystyle\int_{X,Y} xy f_{X,Y}(x,y)\dfx\dfy$
   \item $\E{\transform(Y)} \neq \transform(\E{X}) \qquad$
     (cf.~\hyperref[jensen]{\textsc{Jensen} \T{inequality}})
-  \item $\Pr{X\ge Y} = 0 \imp \E{X}\ge\E{Y}
-    \wedge \Pr{X=Y}=1 \imp \E{X}=\E{Y}$
+  \item $\Pr{X \ge Y} = 1 \imp \E{X}\ge\E{Y}$
+  \item $\Pr{X=Y} = 1 \eqv \E{X}=\E{Y}$
 %  \item $\Pr{\lvert Y\rvert\le c} = 1 \imp \E{Y}<\infty
 %    \wedge \lvert\E{X}\rvert\le c$
   \item $\E{X} = \displaystyle\sum_{x=1}^\infty \Pr{X\ge x}$
