--- a/cookbook.tex
+++ b/cookbook.tex
@@ -617,9 +617,7 @@ Exponential
     \imp \left(\frac{X-\mu}{\sigma}\right)\dist\norm[0,1] $
   \item $X\dist \norm[\mu,\sigma^2] \wedge Z = aX+b
     \imp Z\dist\norm[a\mu+b,a^2\sigma^2] $
-  \item $X\dist \norm[\mu_1,\sigma_1^2] \wedge Y\dist\norm[\mu_2,\sigma_2^2]
-    \imp X+Y\,\dist \norm[\mu_1+\mu_2,\sigma_1^2 + \sigma_2^2] $
-  \item $X_i\dist\norm[\mu_i,\sigma_i^2]
+  \item $X_i\dist\norm[\mu_i,\sigma_i^2] \wedge X_i \ind X_j
      \imp \sum_i X_i \dist \norm[\sum_i\mu_i,\sum_i\sigma_i^2]$
    \item $\Pr{a < X \le b}= \Phi\left(\frac{b-\mu}{\sigma}\right)
      - \Phi\left(\frac{a-\mu}{\sigma}\right) $
