Rename source files

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -2576,7 +2576,7 @@ Balls and Urns \qquad $f: B \to U$ \qquad
 {
 \footnotesize
 \bibliographystyle{abbrv}
-\bibliography{cookbook}
+\bibliography{literature}
 \vfill~
 }
 
