Track version on title page

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -28,6 +28,9 @@
 \usepackage{url}
 \usepackage{xspace}
 
+% Define document version.
+\newcommand{\version}{\input{VERSION}}
+
 % Probability and Statistics LaTeX shortcuts.
 \input{probstat}
 
@@ -80,6 +83,7 @@
   \textsc{\Huge Probability and Statistics\\[2ex] \huge Cookbook}
   \vfill
   \footnotesize{
+    Version \version\\[1ex]
     \today\\[1ex]
     \web\\[1ex]
     Copyright \copyright{}
