Fix typo in index of summation
Reported by Carsten Oppitz.

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -1906,7 +1906,7 @@ Cross-validation estimate of $\E{J(h)}$
 
 Approximation
 \[r(x) = \sum_{j=1}^\infty\beta_j\phi_j(x)
-\approx \sum_{i=1}^J \beta_j\phi_j(x)\]
+\approx \sum_{j=1}^J \beta_j\phi_j(x)\]
 
 Multivariate regression
 \[Y = \Phi\beta + \eta\]
