Perform minor space tweaks

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -1368,6 +1368,7 @@ Posterior odds (of $H_i$ relative to $H_j$)
   _{\text{Bayes Factor }BF_{ij}}
 \times \;\underbrace{\frac{\Pr{H_i}}{\Pr{H_j}}}_{\text{prior odds}}\]
 
+\columnbreak
 Bayes factor
 
 \centering
@@ -1379,6 +1380,8 @@ Bayes factor
   $1 - 2$   & $10 - 100$  & Strong \\
   $> 2$     & $> 100$     & Decisive \\
 \end{tabular}
+
+\vspace*{2ex}
 
 $p^* = \displaystyle\frac{\frac{p}{1-p}BF_{10}}{1+\frac{p}{1-p}BF_{10}}$
 where $p=\Pr{H_1}$ and $p^* = \Pr{H_1 \giv x^n}$
