added special cases of Gamma function

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -2425,6 +2425,8 @@ P(j/n)
   \item $\Gamma(\alpha + 1) = \alpha \Gamma(\alpha) \qquad \alpha>1$
   \item $\Gamma(n) = (n-1)! \qquad n \in \mathbb N$
   \item $\Gamma(1/2) = \sqrt{\pi}$
+  \item $\Gamma(0) = \Gamma(-1) = \infty$
+  \item $\Gamma(-1/2) = -2 \Gamma(1/2)$
 \end{itemize}
 
 \subsection{Beta Function}
