--- a/probstat.tex
+++ b/probstat.tex
@@ -286,7 +286,7 @@
 % Gamma
 \newcommandx\gam[1][1={\alpha,\beta}]{\textrm{Gamma}\left({#1}\right)}
 \newcommandx\dgamma[3][1=x,2=\alpha,3=\beta]%
-{\frac{1}{\Gamma\left( #2 \right) #3^{#2}} #1^{#2 -1}e^{- #1 / #3}}
+{\frac{#3^{#2}}{\Gamma\left( #2 \right)} #1^{#2-1}e^{-#3#1}}
 
 % InverseGamma
 \newcommandx\invgamma[1][1={\alpha,\beta}]{\textrm{InvGamma}\left({#1}\right)}
