Add missing d\theta in posterior mean
The nominator in the posterior mean equation did not have d\theta.

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -1209,7 +1209,7 @@ Definitions
   \item Kernel: part of a density that depends on $\theta$
   \item Posterior mean $\bar\theta_n
     = \int\theta f(\theta\giv x^n)\,d\theta
-    = \frac{\int\theta\Lln(\theta)f(\theta)}
+    = \frac{\int\theta\Lln(\theta)f(\theta)d\theta}
            {\int\Lln(\theta)f(\theta)\,d\theta}$
 \end{itemize}
 
