Add constraint on Students't expectation

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -224,7 +224,7 @@ to refer to the Beta functions (see \S\ref{sec:math:beta}).}
   & \frac{\Gamma\left(\frac{\nu+1}{2}\right)}
     {\sqrt{\nu\pi}\Gamma\left(\frac{\nu}{2}\right)}
     \left(1+\frac{x^2}{\nu}\right)^{-(\nu+1)/2}
-  & 0 %\; \nu > 1
+  & 0 \quad \nu  > 1
   & \begin{cases}
       \displaystyle\frac{\nu}{\nu-2} & \nu > 2 \\
       \infty & 1 < \nu \le 2
