Embed version in LaTeX source
This avoids bug with some LaTeX compilers which have trouble using
\input for files without extension.

Resolves #15.

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -29,8 +29,15 @@
 \usepackage{url}
 \usepackage{xspace}
 
-% Define document version.
-\newcommand{\version}{\input{VERSION}}
+% Document version, MAJOR.MINOR.PATCH. Please change with any modification
+% according to semantic versioning practices:
+%   - The major version changes when adding a new section or topic, or making a
+%     substantial content change.
+%   - The minor version changes for non-trivial fixes, corrections, or
+%     improvements.
+%   - The patch version changes for trivial fixes, such as typos in text or
+%     formulas.
+\newcommand{\version}{0.2}
 
 % Probability and Statistics LaTeX shortcuts.
 \input{probstat}
