Fix variance of Pareto distribution
Spotted by Carlo Cavalieri.

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -37,7 +37,7 @@
 %     improvements.
 %   - The patch version changes for trivial fixes, such as typos in text or
 %     formulas.
-\newcommand{\version}{0.2}
+\newcommand{\version}{0.2.1}
 
 % Probability and Statistics LaTeX shortcuts.
 \input{probstat}
@@ -294,7 +294,7 @@ to refer to the Beta functions (see \S\ref{sec:math:beta}).}
   1 - \left(\frac{x_m}{x} \right)^\alpha \; x\ge x_m &
   \alpha\frac{x_m^\alpha}{x^{\alpha+1}} \quad x\ge x_m&
   \frac{\alpha x_m}{\alpha-1} \; \alpha>1 &
-  \frac{x_m^\alpha}{(\alpha-1)^2(\alpha-2)} \; \alpha>2 &
+  \frac{x_m^2\alpha}{(\alpha-1)^2(\alpha-2)} \; \alpha>2 &
   \alpha(-x_m s)^\alpha \Gamma(-\alpha,-x_m s) \; s<0\\[3ex]
 
   \bottomrule
