Fix issues with expectation
The last identity in the conditional expectation section was botched and
an identity with an infinite sum needed extra qualification.

Closes #18.

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -515,7 +515,7 @@ Definition and properties
   \item $\Pr{X=Y} = 1 \eqv \E{X}=\E{Y}$
 %  \item $\Pr{\lvert Y\rvert\le c} = 1 \imp \E{Y}<\infty
 %    \wedge \lvert\E{X}\rvert\le c$
-  \item $\E{X} = \displaystyle\sum_{x=1}^\infty \Pr{X\ge x}$
+  \item $\E{X} = \displaystyle\sum_{x=1}^\infty \Pr{X\ge x}$ \qquad X discrete
 \end{itemize}
 
 Sample mean
@@ -531,7 +531,7 @@ Sample mean
     f_{(Y,Z)|X}(y,z\giv x)\,dy\,dz$
   \item $\E{Y+Z\giv X} = \E{Y\giv X} + \E{Z\giv X}$
   \item $\E{\transform(X)Y\giv X} = \transform(X)\E{Y\giv X}$
-  \item $\E[Y\giv X] = c \imp \cov{X,Y}=0$
+  \item $\E{Y\giv X} = c \imp \cov{X,Y}=0$
 \end{titemize}
 
 \section{Variance}
