Fix typo in expectation relationship
Resolves #19

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -37,7 +37,7 @@
 %     improvements.
 %   - The patch version changes for trivial fixes, such as typos in text or
 %     formulas.
-\newcommand{\version}{0.2.3}
+\newcommand{\version}{0.2.4}
 
 % Probability and Statistics LaTeX shortcuts.
 \input{probstat}
@@ -512,7 +512,7 @@ Definition and properties
   \item $\E{\transform(Y)} \neq \transform(\E{X}) \qquad$
     (cf.~\hyperref[jensen]{\textsc{Jensen} inequality})
   \item $\Pr{X \ge Y} = 1 \imp \E{X}\ge\E{Y}$
-  \item $\Pr{X=Y} = 1 \eqv \E{X}=\E{Y}$
+  \item $\Pr{X=Y} = 1 \imp \E{X}=\E{Y}$
 %  \item $\Pr{\lvert Y\rvert\le c} = 1 \imp \E{Y}<\infty
 %    \wedge \lvert\E{X}\rvert\le c$
   \item $\E{X} = \displaystyle\sum_{x=1}^\infty \Pr{X\ge x}$ \qquad X discrete
