Tweak attribution and copyright in comment

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -5,7 +5,7 @@
 %
 % ----------------------------------------------------------------------------
 %
-% Copyright © Matthias Vallentin <vallentin@icir.org>, 2016
+% Copyright © Matthias Vallentin <matthias@berkeley.edu>, 2017
 %
 
 \documentclass[landscape]{article}
