--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -99,7 +99,7 @@
     \today\\[1ex]
     \web\\[1ex]
     Copyright \copyright{}
-    \href{http://matthias.vallentin.net}{Matthias Vallentin}, \number\year\\
+    \href{http://matthias.vallentin.net}{Matthias Vallentin}\\
   }
 \end{center}
 
