--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -2387,8 +2387,8 @@ Scaled Periodogram
 \begin{align*}
 P(j/n)
 &= \frac{4}{n}I(j/n) \\
-&=\left( \frac{2}{n} \sum_{t=1}^n x_t \cos(2\pi t j/n \right)^2
-+ \left( \frac{2}{n} \sum_{t=1}^n x_t \sin(2\pi t j/n \right)^2
+&=\left( \frac{2}{n} \sum_{t=1}^n x_t \cos(2\pi t j/n) \right)^2
++ \left( \frac{2}{n} \sum_{t=1}^n x_t \sin(2\pi t j/n) \right)^2
 \end{align*}
 
 \section{Math}
