Fix MGF of Negative Binomial Distribution
Fixes #29

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -164,7 +164,7 @@
 
   Negative Binomial & \nbin & \pnbin & \dnbin &
   r\frac{1-p}{p} & r\frac{1-p}{p^2} &
-  \left(\frac{p}{1-(1-p)e^s}\right)^r \\[3ex]
+  \left(\frac{pe^s}{1-(1-p)e^s}\right)^r \\[3ex]
 
   Geometric & \geo &
   \pgeo \quad x\in\mathbb N^+ &
