Fix conditional expectation

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -524,8 +524,8 @@ Sample mean
 \begin{titemize}{Conditional expectation}
   \item $\E{Y\giv X=x} = \displaystyle\int y f(y\giv x)\dy$
   \item $\E{X} = \E{\E{X\giv Y}}$
-  \item $\E[\transform(X,Y)\giv X=x]
-    = \displaystyle\int_{-\infty}^\infty \transform(x,y)f_{Y|X}(y\giv x)\dx$
+  \item $\E{\transform(X,Y)\giv X=x}
+    = \displaystyle\int_{-\infty}^\infty \transform(x,y)f_{Y|X}(y\giv x)\dy$
   \item $\E{\transform(Y,Z)\giv X=x} =
     \displaystyle\int_{-\infty}^\infty\transform(y,z)
     f_{(Y,Z)|X}(y,z\giv x)\,dy\,dz$
