Add another expectation identity

--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -531,6 +531,7 @@ Sample mean
     f_{(Y,Z)|X}(y,z\giv x)\,dy\,dz$
   \item $\E{Y+Z\giv X} = \E{Y\giv X} + \E{Z\giv X}$
   \item $\E{\transform(X)Y\giv X} = \transform(X)\E{Y\giv X}$
+  \item $\E{\transform(X,Y)} = \E[X]{\E{\transform(X,Y)\giv X}}$
   \item $\E{Y\giv X} = c \imp \cov{X,Y}=0$
 \end{titemize}
 
